<?xml version="1.0"?>
<package format="3">
  <name>long_term_mapping</name>
  <version>0.0.0</version>

  <description>
    Multi Session SLAM package.
  </description>

  <maintainer email="kkw1125@hdec.co.kr">kkw</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>nano_gicp</depend>
  <depend>patchworkpp</depend>
  <depend>fast_lio</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
